--- a/Data/build.gradle
+++ b/Data/build.gradle
@@ -8,7 +8,7 @@ android {
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -44,7 +44,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.0'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
 
-    implementation "io.insert-koin:koin-android:$koin_version"
+    implementation "io.insert-koin:koin-core:3.0.2"
 
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
