--- a/Presentation/build.gradle
+++ b/Presentation/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "ru.tinkoff.moshkovtinkofftest"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -48,13 +48,15 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
     implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "org.koin:koin-android-viewmodel:2.2.2"
+
+    implementation ("com.github.bumptech.glide:glide:4.11.0")
 
     implementation project (":Data")
     implementation project (":Domain")
